k8s/jupyterhub/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-public
  namespace: jupyterhub
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
  selector:
    app: jupyterhub
    component: proxy
