k8s/jupyterhub/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jupyterhub-to-neo4j
  namespace: neo4j
spec:
  podSelector:
    matchLabels:
      app: neo4j-threadr
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: jupyterhub
    ports:
    - port: 7687
    - port: 7474
